// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTabs props display condensed is rendered 1`] = `
<div
  class="ouiTabs ouiTabs--condensed"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs props display default is rendered 1`] = `
<div
  class="ouiTabs"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs props expand is rendered 1`] = `
<div
  class="ouiTabs ouiTabs--expand"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs props size l is rendered 1`] = `
<div
  class="ouiTabs ouiTabs--large"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs props size m is rendered 1`] = `
<div
  class="ouiTabs"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs props size s is rendered 1`] = `
<div
  class="ouiTabs ouiTabs--small"
  role="tablist"
>
  children
</div>
`;

exports[`OuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="ouiTabs testClass1 testClass2"
  data-test-subj="test subject string"
  role="tablist"
>
  children
</div>
`;
